# cv-generator

./: .gitignore  README.md  pyproject.toml
cv_generator/: cv_html.py  cv_json.py  main.py  utils.py
cv_generator/assets/: template.html
cv_generator/assets/languages/: en.yml  es.yml
cv_generator/assets/styles/: font-awesome.min.css  normalize.css  style.css
cv_generator/files/: template.html
cv_generator/source_data/: cv-example.yml
tests/: test_cv_generator.py
